Added UserProfilesSettings initialization. Added UserProfile update on Team Selection. Added logic to start the app with the last selected team for the user profile. Updated GetUserProfileByIdQueryHandler and ListUserProfileQueryHandler to use UserProfileSettings. Added GetUserProfileSettingsByUserProfileIdQueryHandler to fetch UserProfileSettings. Renamed UserProfileOptions to UserProfileSettings. Made MainWindowViewModel independent from ViewModelBase and updated ViewModelBase to fetch options on initialization.

--- a/src/Hyperar.HUM.Application/Hyperar.HUM.Application.csproj
+++ b/src/Hyperar.HUM.Application/Hyperar.HUM.Application.csproj
@@ -24,4 +24,8 @@
         <InternalsVisibleTo Include="Hyperar.HUM.Application.UnitTest" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="UserProfile\Settings\Commands\Update\" />
+    </ItemGroup>
+
 </Project>
